Bug #6017
savecore's messages about read errors are useless
Start date:
2015-06-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
A user says
<igork> I can see: [16:00] <igork> 3:38 23% donesavecore: fread: ferror 32 feof 0 <igork> savecore: bad summary magic 74cd7278
This is bloody useless. The returns of `ferror` and `feof` are only meaningful to distinguish the two conditions. What should be happening is that strerror(errno) should be logged if ferror returns non-0, so we have some idea what's actually happened.
Updated by Alexander Eremin over 4 years ago
- Status changed from New to In Progress
- Assignee set to Alexander Eremin
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 0e06cf66748977451504da1dae14c0975c3d331a
commit 0e06cf66748977451504da1dae14c0975c3d331a Author: Alexander Eremin <a.eremin@nexenta.com> Date: 2016-10-25T14:54:07.000Z 6017 savecore's messages about read errors are useless Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@omniti.com>